engine/scripting/native_api/dse_api.h

// ============================================================
// Context Setup — 引擎初始化时调用一次
// ============================================================

DSE_CAPI void dse_native_api_init(
    void* world,           // World*
    void* asset_manager,   // AssetManager*
    void* audio_system,    // AudioSystem* (可为 nullptr)
    void  (*quit_fn)(void),
    void  (*set_title_fn)(const char*),
    float (*get_fps_fn)(void),
    void  (*set_fps_fn)(float),
    int   (*get_draw_calls_fn)(void)   // 可为 nullptr
);
// ============================================================
// Extended Context Setup — 扩展上下文（metrics 回调 + floating origin）
// ============================================================

DSE_CAPI void dse_native_api_init_ext(
    int   (*get_max_batch_sprites_fn)(void),
    int   (*get_sprite_count_fn)(void),
    int   (*get_gpu_driven_active_fn)(void),
    int   (*get_gpu_indirect_draw_count_fn)(void),
    int   (*get_gpu_total_instances_fn)(void),
    void* floating_origin);
DSE_CAPI int   dse_vsm_get_clipmap_levels(void);
// EQS (Environment Query System)
DSE_CAPI int   dse_eqs_init(void);
DSE_CAPI void  dse_eqs_shutdown(void);
DSE_CAPI uint32_t dse_eqs_create_template(const char* name);
DSE_CAPI void  dse_eqs_destroy_template(uint32_t tmpl);
DSE_CAPI void  dse_eqs_set_generator(uint32_t tmpl, int type, float radius, float spacing, int max_points);
DSE_CAPI void  dse_eqs_add_scorer(uint32_t tmpl, int type, float weight, int invert, float max_value);
DSE_CAPI void  dse_eqs_clear_scorers(uint32_t tmpl);
DSE_CAPI void  dse_eqs_set_combine_mode(uint32_t tmpl, int mode);
DSE_CAPI void  dse_eqs_set_max_results(uint32_t tmpl, uint32_t max_results);
// execute: out = {best_x,best_y,best_z,best_score,total_generated,valid_count,query_time_ms}
DSE_CAPI void  dse_eqs_execute(uint32_t tmpl, float x, float y, float z, float* out_result);
DSE_CAPI int   dse_eqs_get_template_count(void);
DSE_CAPI void  dse_eqs_execute_at(uint32_t tmpl, float px, float py, float pz,
                                  float cx, float cy, float cz, float* out_result);
// Distribution
DSE_CAPI int   dse_dist_init(float cell_size, int max_downloads, const char* cdn_url);
DSE_CAPI void  dse_dist_shutdown(void);
DSE_CAPI int   dse_dist_load_manifest(const char* path);
DSE_CAPI int   dse_dist_save_manifest(const char* path);
DSE_CAPI int   dse_dist_package_cell(int cx, int cz, int lod, const char* const* assets, int count);
DSE_CAPI void  dse_dist_request_download(const char* package);
DSE_CAPI void  dse_dist_cancel_download(const char* package);
DSE_CAPI void  dse_dist_update_priorities(float x, float y, float z);
DSE_CAPI void  dse_dist_tick(float dt);
DSE_CAPI int   dse_dist_is_installed(const char* package);
DSE_CAPI void  dse_dist_get_stats(int* out_total, int* out_installed, int* out_downloading,
                                  int* out_pending, double* out_downloaded_bytes, double* out_speed_bps);
DSE_CAPI int   dse_dist_get_missing(float x, float y, float z, float radius,
                                    char* out_buf, int buf_cap);
DSE_CAPI int   dse_dist_verify(const char* package);
DSE_CAPI uint64_t dse_dist_get_disk_usage(void);
// ============================================================
// Font — 字体服务
// ============================================================

DSE_CAPI int   dse_font_load(const char* font_id, const char* ttf_path);
DSE_CAPI int   dse_font_load_cjk(const char* font_id, const char* ttf_path);
DSE_CAPI void  dse_font_unload(const char* font_id);
DSE_CAPI int   dse_font_set_default(const char* font_id);
DSE_CAPI float dse_font_measure(const char* text, const char* font_id, float font_size);
DSE_CAPI float dse_font_line_height(const char* font_id, float font_size);
DSE_CAPI uint32_t dse_font_get_texture(const char* font_id);
// ============================================================
// Spine — 骨骼动画渲染组件
// ============================================================

DSE_CAPI void  dse_spine_add_renderer(uint32_t e, const char* skel_path, const char* atlas_path);
DSE_CAPI void  dse_spine_set_animation(uint32_t e, const char* anim_name, int loop);
// ============================================================
// Terrain / Water / Grass / Foliage / Environment — 组件创建与复合操作
// ============================================================

DSE_CAPI void  dse_terrain_add(uint32_t e, const char* heightmap_path,
                                float width, float depth, float max_height);
DSE_CAPI void  dse_terrain_set_params(uint32_t e, int res_x, int res_z,
                                       int max_lod, float lod_factor, int use_dynamic_lod);
DSE_CAPI void  dse_terrain_set_height(uint32_t e, int x, int z, float height);
DSE_CAPI int   dse_terrain_load_heightmap(uint32_t e, const char* path,
                                           int* out_w, int* out_h, int* out_ch,
                                           int* out_rx, int* out_rz);
DSE_CAPI int   dse_terrain_set_texture(uint32_t e, const char* path,
                                        uint32_t* out_handle, int* out_w, int* out_h);
DSE_CAPI void  dse_terrain_get_lod(uint32_t e, int* out_lod, int* out_rx, int* out_rz,
                                    int* out_max_lod, float* out_lod_factor);
DSE_CAPI float dse_terrain_sample_height(uint32_t e, float wx, float wz);
DSE_CAPI int   dse_terrain_set_splat_texture(uint32_t e, int layer, const char* path);
DSE_CAPI void  dse_water_add(uint32_t e);
DSE_CAPI void  dse_water_set(uint32_t e, int enabled, float water_level,
                              float dr, float dg, float db,
                              float sr, float sg, float sb,
                              float max_depth, float transparency,
                              float wave_amp, float wave_freq, float wave_speed,
                              float wdir_x, float wdir_y,
                              float refraction, float reflection, float spec_power,
                              float caustic_int, float caustic_scale,
                              float foam_int, float foam_threshold,
                              float ufog_density, float ufog_r, float ufog_g, float ufog_b);
DSE_CAPI int   dse_water_get(uint32_t e, int* out_enabled, float* out_water_level,
                              float* out_deep_rgb, float* out_shallow_rgb,
                              float* out_max_depth, float* out_transparency,
                              float* out_wave, float* out_wdir,
                              float* out_refraction, float* out_reflection, float* out_spec_power);
DSE_CAPI void  dse_grass_add(uint32_t e, float density, float spawn_radius,
                              float blade_height, float blade_width);
DSE_CAPI void  dse_grass_set_params(uint32_t e, float density, float spawn_radius,
                                     float blade_height, float blade_width,
                                     float blade_height_var, float chunk_size, int seed);
DSE_CAPI void  dse_grass_set_color(uint32_t e, float br, float bg, float bb,
                                    float tr, float tg, float tb);
DSE_CAPI void  dse_grass_set_wind(uint32_t e, float dx, float dy,
                                   float speed, float strength, float turbulence);
DSE_CAPI void  dse_grass_set_lod(uint32_t e, float near_dist, float far_dist,
                                  int cast_shadow, float shadow_dist);
DSE_CAPI void  dse_grass_set_enabled(uint32_t e, int enabled);
DSE_CAPI int   dse_grass_get_stats(uint32_t e);
DSE_CAPI void  dse_foliage_add(uint32_t e);
DSE_CAPI void  dse_tree_add(uint32_t e, const char* mesh_path);
DSE_CAPI void  dse_terrain_tile_manager_add(uint32_t e);
DSE_CAPI void  dse_dynamic_obstacle_add(uint32_t e, int shape);
DSE_CAPI void  dse_navmesh_rebake_add(uint32_t e);
// Terrain Deformation
DSE_CAPI void dse_terrain_deform_init(float max_depth, float max_height);
DSE_CAPI int  dse_terrain_deform_apply(int type, float x, float y, float z,
                                       float radius, float strength);
DSE_CAPI int  dse_terrain_deform_undo(void);
DSE_CAPI int  dse_terrain_deform_redo(void);
DSE_CAPI float dse_terrain_deform_sample_height(float x, float z);
DSE_CAPI void dse_terrain_deform_shutdown(void);
// GOAP
DSE_CAPI int   dse_ai_goap_create(void);
DSE_CAPI void  dse_ai_goap_destroy(int planner_id);