GameScripts/DSEngine.Runtime/Generated/NativeManual.gen.cs


    [LibraryImport(Lib, EntryPoint = "dse_vsm_get_clipmap_levels")]
    internal static partial int dse_vsm_get_clipmap_levels();

    [LibraryImport(Lib, EntryPoint = "dse_eqs_init")]
    internal static partial int dse_eqs_init();

    [LibraryImport(Lib, EntryPoint = "dse_eqs_shutdown")]
    internal static partial void dse_eqs_shutdown();

    [LibraryImport(Lib, EntryPoint = "dse_eqs_create_template", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial uint dse_eqs_create_template(string name);

    [LibraryImport(Lib, EntryPoint = "dse_eqs_destroy_template")]
    internal static partial void dse_eqs_destroy_template(uint tmpl);

    [LibraryImport(Lib, EntryPoint = "dse_eqs_set_generator")]
    internal static partial void dse_eqs_set_generator(uint tmpl, int type, float radius, float spacing, int maxPoints);

    [LibraryImport(Lib, EntryPoint = "dse_eqs_add_scorer")]
    internal static partial void dse_eqs_add_scorer(uint tmpl, int type, float weight, int invert, float maxValue);

    [LibraryImport(Lib, EntryPoint = "dse_eqs_clear_scorers")]
    internal static partial void dse_eqs_clear_scorers(uint tmpl);

    [LibraryImport(Lib, EntryPoint = "dse_eqs_set_combine_mode")]
    internal static partial void dse_eqs_set_combine_mode(uint tmpl, int mode);

    [LibraryImport(Lib, EntryPoint = "dse_eqs_set_max_results")]
    internal static partial void dse_eqs_set_max_results(uint tmpl, uint maxResults);

    [LibraryImport(Lib, EntryPoint = "dse_eqs_execute")]
    internal static partial void dse_eqs_execute(uint tmpl, float x, float y, float z, out float outResult);

    [LibraryImport(Lib, EntryPoint = "dse_eqs_get_template_count")]
    internal static partial int dse_eqs_get_template_count();

    [LibraryImport(Lib, EntryPoint = "dse_eqs_execute_at")]
    internal static partial void dse_eqs_execute_at(uint tmpl, float px, float py, float pz, float cx, float cy, float cz, out float outResult);

    [LibraryImport(Lib, EntryPoint = "dse_dist_init", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_dist_init(float cellSize, int maxDownloads, string cdnUrl);

    [LibraryImport(Lib, EntryPoint = "dse_dist_shutdown")]
    internal static partial void dse_dist_shutdown();

    [LibraryImport(Lib, EntryPoint = "dse_dist_load_manifest", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_dist_load_manifest(string path);

    [LibraryImport(Lib, EntryPoint = "dse_dist_save_manifest", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_dist_save_manifest(string path);

    [LibraryImport(Lib, EntryPoint = "dse_dist_package_cell", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_dist_package_cell(int cx, int cz, int lod, string[] assets, int count);

    [LibraryImport(Lib, EntryPoint = "dse_dist_request_download", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_dist_request_download(string package);

    [LibraryImport(Lib, EntryPoint = "dse_dist_cancel_download", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_dist_cancel_download(string package);

    [LibraryImport(Lib, EntryPoint = "dse_dist_update_priorities")]
    internal static partial void dse_dist_update_priorities(float x, float y, float z);

    [LibraryImport(Lib, EntryPoint = "dse_dist_tick")]
    internal static partial void dse_dist_tick(float dt);

    [LibraryImport(Lib, EntryPoint = "dse_dist_is_installed", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_dist_is_installed(string package);

    [LibraryImport(Lib, EntryPoint = "dse_dist_get_stats")]
    internal static partial void dse_dist_get_stats(out int outTotal, out int outInstalled, out int outDownloading, out int outPending, out double outDownloadedBytes, out double outSpeedBps);

    [LibraryImport(Lib, EntryPoint = "dse_dist_get_missing")]
    internal static partial int dse_dist_get_missing(float x, float y, float z, float radius, [Out] byte[] outBuf, int bufCap);

    [LibraryImport(Lib, EntryPoint = "dse_dist_verify", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_dist_verify(string package);

    [LibraryImport(Lib, EntryPoint = "dse_dist_get_disk_usage")]
    internal static partial ulong dse_dist_get_disk_usage();

    [LibraryImport(Lib, EntryPoint = "dse_font_load", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_font_load(string fontId, string ttfPath);

    [LibraryImport(Lib, EntryPoint = "dse_font_load_cjk", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_font_load_cjk(string fontId, string ttfPath);

    [LibraryImport(Lib, EntryPoint = "dse_font_unload", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_font_unload(string fontId);

    [LibraryImport(Lib, EntryPoint = "dse_font_set_default", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_font_set_default(string fontId);

    [LibraryImport(Lib, EntryPoint = "dse_font_measure", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial float dse_font_measure(string text, string fontId, float fontSize);

    [LibraryImport(Lib, EntryPoint = "dse_font_line_height", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial float dse_font_line_height(string fontId, float fontSize);

    [LibraryImport(Lib, EntryPoint = "dse_font_get_texture", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial uint dse_font_get_texture(string fontId);

    [LibraryImport(Lib, EntryPoint = "dse_spine_add_renderer", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_spine_add_renderer(uint e, string skelPath, string atlasPath);

    [LibraryImport(Lib, EntryPoint = "dse_spine_set_animation", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_spine_set_animation(uint e, string animName, int loop);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_add", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_terrain_add(uint e, string heightmapPath, float width, float depth, float maxHeight);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_set_params")]
    internal static partial void dse_terrain_set_params(uint e, int resX, int resZ, int maxLod, float lodFactor, int useDynamicLod);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_set_height")]
    internal static partial void dse_terrain_set_height(uint e, int x, int z, float height);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_load_heightmap", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_terrain_load_heightmap(uint e, string path, out int outW, out int outH, out int outCh, out int outRx, out int outRz);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_set_texture", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_terrain_set_texture(uint e, string path, out uint outHandle, out int outW, out int outH);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_get_lod")]
    internal static partial void dse_terrain_get_lod(uint e, out int outLod, out int outRx, out int outRz, out int outMaxLod, out float outLodFactor);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_sample_height")]
    internal static partial float dse_terrain_sample_height(uint e, float wx, float wz);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_set_splat_texture", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int dse_terrain_set_splat_texture(uint e, int layer, string path);

    [LibraryImport(Lib, EntryPoint = "dse_water_add")]
    internal static partial void dse_water_add(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_water_set")]
    internal static partial void dse_water_set(uint e, int enabled, float waterLevel, float dr, float dg, float db, float sr, float sg, float sb, float maxDepth, float transparency, float waveAmp, float waveFreq, float waveSpeed, float wdirX, float wdirY, float refraction, float reflection, float specPower, float causticInt, float causticScale, float foamInt, float foamThreshold, float ufogDensity, float ufogR, float ufogG, float ufogB);

    [LibraryImport(Lib, EntryPoint = "dse_water_get")]
    internal static partial int dse_water_get(uint e, out int outEnabled, out float outWaterLevel, out float outDeepRgb, out float outShallowRgb, out float outMaxDepth, out float outTransparency, out float outWave, out float outWdir, out float outRefraction, out float outReflection, out float outSpecPower);

    [LibraryImport(Lib, EntryPoint = "dse_grass_add")]
    internal static partial void dse_grass_add(uint e, float density, float spawnRadius, float bladeHeight, float bladeWidth);

    [LibraryImport(Lib, EntryPoint = "dse_grass_set_params")]
    internal static partial void dse_grass_set_params(uint e, float density, float spawnRadius, float bladeHeight, float bladeWidth, float bladeHeightVar, float chunkSize, int seed);

    [LibraryImport(Lib, EntryPoint = "dse_grass_set_color")]
    internal static partial void dse_grass_set_color(uint e, float br, float bg, float bb, float tr, float tg, float tb);

    [LibraryImport(Lib, EntryPoint = "dse_grass_set_wind")]
    internal static partial void dse_grass_set_wind(uint e, float dx, float dy, float speed, float strength, float turbulence);

    [LibraryImport(Lib, EntryPoint = "dse_grass_set_lod")]
    internal static partial void dse_grass_set_lod(uint e, float nearDist, float farDist, int castShadow, float shadowDist);

    [LibraryImport(Lib, EntryPoint = "dse_grass_set_enabled")]
    internal static partial void dse_grass_set_enabled(uint e, int enabled);

    [LibraryImport(Lib, EntryPoint = "dse_grass_get_stats")]
    internal static partial int dse_grass_get_stats(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_foliage_add")]
    internal static partial void dse_foliage_add(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_tree_add", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial void dse_tree_add(uint e, string meshPath);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_tile_manager_add")]
    internal static partial void dse_terrain_tile_manager_add(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_dynamic_obstacle_add")]
    internal static partial void dse_dynamic_obstacle_add(uint e, int shape);

    [LibraryImport(Lib, EntryPoint = "dse_navmesh_rebake_add")]
    internal static partial void dse_navmesh_rebake_add(uint e);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_deform_init")]
    internal static partial void dse_terrain_deform_init(float maxDepth, float maxHeight);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_deform_apply")]
    internal static partial int dse_terrain_deform_apply(int type, float x, float y, float z, float radius, float strength);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_deform_undo")]
    internal static partial int dse_terrain_deform_undo();

    [LibraryImport(Lib, EntryPoint = "dse_terrain_deform_redo")]
    internal static partial int dse_terrain_deform_redo();

    [LibraryImport(Lib, EntryPoint = "dse_terrain_deform_sample_height")]
    internal static partial float dse_terrain_deform_sample_height(float x, float z);

    [LibraryImport(Lib, EntryPoint = "dse_terrain_deform_shutdown")]
    internal static partial void dse_terrain_deform_shutdown();

    [LibraryImport(Lib, EntryPoint = "dse_ai_goap_create")]
    internal static partial int dse_ai_goap_create();

    [LibraryImport(Lib, EntryPoint = "dse_ai_goap_destroy")]
    internal static partial void dse_ai_goap_destroy(int plannerId);
